--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -16,8 +16,15 @@ jobs:
         with:
           ruby-version: '3.1.4'
 
+      - name: Install Node.js and Yarn
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14' # または他の適切なバージョン
+
       - name: Install dependencies
-        run: bundle install --jobs 4 --retry 3
+        run: |
+          bundle install --jobs 4 --retry 3
+          yarn install
 
       - name: Precompile assets
         run: RAILS_ENV=production rails assets:precompile
