--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -5,36 +5,11 @@ on:
       - main
 jobs:
   deploy:
-    name: Vimemo
+    name: Deploy app
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1.4'
-
-      - name: Install Node.js and Yarn
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14' # または他の適切なバージョン
-
-      - name: Install dependencies
-        run: |
-          bundle install --jobs 4 --retry 3
-          yarn install
-
-      - name: Precompile assets
-        run: RAILS_ENV=production rails assets:precompile
-        env:
-          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
-          SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
-
+      - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-
-      - name: Deploy to Fly
-        run: flyctl deploy --remote-only
+      - run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
