--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -27,6 +27,7 @@ jobs:
         run: RAILS_ENV=production bundle exec rails assets:precompile
         env:
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
+          SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
 
       - uses: superfly/flyctl-actions/setup-flyctl@master
 
