--- a/config/database.yml
+++ b/config/database.yml
@@ -37,6 +37,8 @@ default: &default
 development:
   <<: *default
   database: vimemo_development
+  username: katounaoto
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
