--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -13,22 +13,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1.4'
+      # - name: Set up Ruby
+      #   uses: ruby/setup-ruby@v1
+      #   with:
+      #     ruby-version: '3.1.4'
 
-      - name: Install dependencies
-        run: |
-          gem install bundler
-          bundle install
+      # - name: Install dependencies
+      #   run: |
+      #     gem install bundler
+      #     bundle install
 
-      - name: Precompile assets
-        run: RAILS_ENV=production bundle exec rails assets:precompile
-        env:
-          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
-          SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
-          
+      # - name: Precompile assets
+      #   run: RAILS_ENV=production bundle exec rails assets:precompile
+      #   env:
+      #     RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
+      #     SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
+
 
       - uses: superfly/flyctl-actions/setup-flyctl@master
 
