--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -35,4 +35,4 @@ jobs:
       - name: Deploy to Fly
         run: flyctl deploy --remote-only
         env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+          # FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
