--- a/package.json
+++ b/package.json
@@ -2,18 +2,14 @@
   "name": "vi-memo",
   "private": true,
   "dependencies": {
-    "@hotwired/turbo-rails": "^8.0.4",
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^7.1.3-2",
-    "@rails/webpacker": "5.4.4",
-    "turbolinks": "^5.2.0",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "@hotwired/turbo-rails": "^7.1.3",
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
+    "esbuild": "^0.20.1",
+    "sass": "^1.54.0"
   },
-  "version": "0.1.0",
-  "devDependencies": {
-    "webpack-dev-server": "^3"
-  },
-  "packageManager": "yarn@1.22.22"
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
+  }
 }
