--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "dependencies": {
     "@hotwired/turbo-rails": "^7.1.3",
     "@popperjs/core": "^2.11.5",
+    "@rails/ujs": "^7.1.3-2",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
-    "esbuild": "^0.20.1",
+    "esbuild": "^0.20.2",
     "sass": "^1.54.0"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
   }
 }
