--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "vi-memo",
+  "name": "app",
   "private": true,
   "dependencies": {
-    "@hotwired/turbo-rails": "^7.1.3",
-    "@popperjs/core": "^2.11.5",
-    "@rails/ujs": "^7.1.3-2",
-    "bootstrap": "^5.2.0",
-    "bootstrap-icons": "^1.9.1",
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/turbo-rails": "^8.0.4",
+    "autoprefixer": "^10.4.19",
     "esbuild": "^0.20.2",
-    "sass": "^1.54.0"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
-  },
-  "packageManager": "yarn@1.22.22"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
+  }
 }
