--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ yarn-debug.log*
 # /app/assets/builds/*
 !/app/assets/builds/.keep
 
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+
