--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "daisyui": "^4.10.1",
     "esbuild": "^0.20.2",
     "postcss": "^8.4.38",
+    "swiper": "^11.1.1",
     "tailwindcss": "^3.4.3"
   },
   "scripts": {
