--- a/fly.toml
+++ b/fly.toml
@@ -1,16 +1,16 @@
-# fly.toml app configuration file generated for vimemoback on 2024-04-05T19:02:52+09:00
+# fly.toml app configuration file generated for vimemo on 2024-04-16T17:23:20+09:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'vimemoback'
+app = 'vimemo'
 primary_region = 'nrt'
 console_command = '/rails/bin/rails console'
 
 [build]
 
 [deploy]
-  release_command = "./bin/rails db:migrate"
+  release_command = './bin/rails db:prepare'
 
 [http_service]
   internal_port = 3000
