--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
 
+vimemo-63237-firebase-adminsdk-5f7do-56e87fd1e9.json
