--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.4",
+    "add": "^2.0.6",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.1",
+    "drawer": "^0.0.2",
     "esbuild": "^0.20.2",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "shadcn-ui": "^0.8.0",
+    "tailwindcss": "^3.4.3",
+    "vaul": "^0.9.1"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
