flyメモリ512mbに変更

--- a/fly.toml
+++ b/fly.toml
@@ -22,6 +22,7 @@ console_command = '/rails/bin/rails console'
 
 [[vm]]
   size = 'shared-cpu-1x'
+  memory = "512mb"
 
 [[statics]]
   guest_path = '/app/public'
